# naru

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.alloy  Dockerfile.base  Dockerfile.base.debian  Dockerfile.test  Justfile  README.md  flake.nix  naru.spec.rpkg  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.planning/: STACKING-WINDOWS-PLAN.md
docs/: mkdocs.yaml  pyproject.toml
docs/hooks/: shortcodes.py
docs/wiki/: Accessibility.md  Application-Issues.md  Configuration:-Animations.md  Configuration:-Debug-Options.md  Configuration:-Gestures.md  Configuration:-Include.md  Configuration:-Input.md  Configuration:-Introduction.md  FAQ.md  IPC.md  (+33 more)
naru-config/: Cargo.toml
naru-ipc/: Cargo.toml  README.md
naru-visual-tests/: Cargo.toml  README.md
naru-visual-tests/src/: main.rs  smithay_view.rs  test_window.rs
naru-visual-tests/src/cases/: gradient_angle.rs  gradient_area.rs  gradient_oklab.rs  gradient_oklab_alpha.rs  gradient_oklch_alpha.rs  gradient_oklch_decreasing.rs  gradient_oklch_increasing.rs  gradient_oklch_longer.rs  gradient_oklch_shorter.rs  gradient_srgb.rs  gradient_srgb_alpha.rs  gradient_srgblinear.rs  gradient_srgblinear_alpha.rs  layout.rs  mod.rs  tile.rs  window.rs
plans/: crispy-honking-sunrise.md
resources/: default-config.kdl  naru-session  naru-shutdown.target  naru.desktop  naru.service  rustdoc-index.html
scripts/: build.sh  install-deps.sh  install.sh  setup-kickoff-menu.sh  setup-swayosd.sh
src/: a11y.rs  cli.rs  lib.rs  main.rs  naru.rs
tests/: session_restore_e2e.rs
(+138 files in other folders)
