[package]
name = "naru-visual-tests"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_4"] }
anyhow.workspace = true
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_12"] }
naru = { version = "26.4.0", path = ".." }
naru-config = { version = "26.4.0", path = "../naru-config" }
smithay.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
